"""Ajout des models bd

Revision ID: e14f9604cd05
Revises: d8084add8f60
Create Date: 2026-06-15 18:43:49.410375

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = 'e14f9604cd05'
down_revision: Union[str, Sequence[str], None] = 'd8084add8f60'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    sa.Enum('INITIAL_IMPORT', 'MEMBER_JOINED', 'MEMBER_LEFT', 'MANUAL_REFRESH', name='wasynctype').create(op.get_bind())
    sa.Enum('PENDING', 'QUEUED', 'SENT', 'DELIVERED', 'FAILED', name='wastatus').create(op.get_bind())
    sa.Enum('MEMBER', 'ADMIN', name='wamemberrole').create(op.get_bind())
    op.create_table('members',
    sa.Column('id', sa.Uuid(), nullable=False),
    sa.Column('wa_jid', sa.String(length=100), nullable=False),
    sa.Column('wa_name', sa.String(length=100), nullable=True),
    sa.Column('display_name', sa.String(length=100), nullable=True),
    sa.Column('phone_number', sa.String(length=20), nullable=True),
    sa.Column('avatar_url', sa.Text(), nullable=True),
    sa.Column('is_active', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('wa_jid')
    )
    op.create_index('idx_members_created_at', 'members', ['created_at'], unique=False, postgresql_using='btree')
    op.create_index('idx_members_is_active', 'members', ['is_active'], unique=False)
    op.create_index('idx_members_wa_jid', 'members', ['wa_jid'], unique=False)
    op.create_index('uq_members_wa_jid', 'members', ['wa_jid'], unique=True)
    op.create_table('threads',
    sa.Column('id', sa.Uuid(), nullable=False),
    sa.Column('name', sa.String(length=100), nullable=False),
    sa.Column('slug', sa.String(length=50), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('wa_group_jid', sa.String(length=100), nullable=False),
    sa.Column('wa_group_name', sa.String(length=100), nullable=True),
    sa.Column('password_hash', sa.String(length=255), nullable=False),
    sa.Column('is_active', sa.Boolean(), nullable=False),
    sa.Column('last_wa_sync_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('slug'),
    sa.UniqueConstraint('wa_group_jid')
    )
    op.create_index('idx_threads_created_at', 'threads', ['created_at'], unique=False, postgresql_using='btree')
    op.create_index('idx_threads_is_active', 'threads', ['is_active'], unique=False)
    op.create_index('idx_threads_wa_group_jid', 'threads', ['wa_group_jid'], unique=False)
    op.create_index('uq_threads_slug', 'threads', ['slug'], unique=True)
    op.create_index('uq_threads_wa_group_jid', 'threads', ['wa_group_jid'], unique=True)
    op.create_table('messages',
    sa.Column('id', sa.Uuid(), nullable=False),
    sa.Column('thread_id', sa.Uuid(), nullable=False),
    sa.Column('content', sa.Text(), nullable=False),
    sa.Column('wa_message_id', sa.String(length=100), nullable=True),
    sa.Column('wa_status', postgresql.ENUM('PENDING', 'QUEUED', 'SENT', 'DELIVERED', 'FAILED', name='wastatus', create_type=False), nullable=False),
    sa.Column('wa_forwarded_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('is_hidden', sa.Boolean(), nullable=False),
    sa.Column('hidden_reason', sa.String(length=100), nullable=True),
    sa.Column('hidden_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.ForeignKeyConstraint(['thread_id'], ['threads.id'], name='fk_messages_thread', ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('idx_messages_thread_created', 'messages', ['thread_id', 'created_at'], unique=False, postgresql_using='btree')
    op.create_index('idx_messages_wa_status_created', 'messages', ['wa_status', 'created_at'], unique=False, postgresql_where=sa.text("wa_status IN ('PENDING', 'FAILED')"))
    op.create_table('thread_members',
    sa.Column('thread_id', sa.Uuid(), nullable=False),
    sa.Column('member_id', sa.Uuid(), nullable=False),
    sa.Column('wa_role', postgresql.ENUM('MEMBER', 'ADMIN', name='wamemberrole', create_type=False), nullable=False),
    sa.Column('is_active', sa.Boolean(), nullable=False),
    sa.Column('left_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.ForeignKeyConstraint(['member_id'], ['members.id'], name='fk_thread_members_member', ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['thread_id'], ['threads.id'], name='fk_thread_members_thread', ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('thread_id', 'member_id')
    )
    op.create_index('idx_thread_members_member_active', 'thread_members', ['member_id'], unique=False, postgresql_where=sa.text('is_active = true'))
    op.create_table('wa_sync_log',
    sa.Column('id', sa.Uuid(), nullable=False),
    sa.Column('thread_id', sa.Uuid(), nullable=False),
    sa.Column('sync_type', postgresql.ENUM('INITIAL_IMPORT', 'MEMBER_JOINED', 'MEMBER_LEFT', 'MANUAL_REFRESH', name='wasynctype', create_type=False), nullable=False),
    sa.Column('wa_jid', sa.String(length=100), nullable=True),
    sa.Column('members_added', sa.Integer(), nullable=False),
    sa.Column('members_removed', sa.Integer(), nullable=False),
    sa.Column('payload', sa.JSON(), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.ForeignKeyConstraint(['thread_id'], ['threads.id'], name='fk_wa_sync_log_thread', ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('idx_wa_sync_thread', 'wa_sync_log', ['thread_id', 'created_at'], unique=False, postgresql_using='btree')
    op.create_table('message_mentions',
    sa.Column('message_id', sa.Uuid(), nullable=False),
    sa.Column('member_id', sa.Uuid(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.ForeignKeyConstraint(['member_id'], ['members.id'], name='fk_message_mentions_member', ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['message_id'], ['messages.id'], name='fk_message_mentions_message', ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('message_id', 'member_id')
    )
    op.create_index('idx_message_mentions_member', 'message_mentions', ['member_id'], unique=False)
    op.create_table('wa_delivery_log',
    sa.Column('id', sa.Uuid(), nullable=False),
    sa.Column('message_id', sa.Uuid(), nullable=False),
    sa.Column('status', postgresql.ENUM('PENDING', 'QUEUED', 'SENT', 'DELIVERED', 'FAILED', name='wastatus', create_type=False), nullable=False),
    sa.Column('error_code', sa.String(length=50), nullable=True),
    sa.Column('error_msg', sa.Text(), nullable=True),
    sa.Column('payload', sa.JSON(), nullable=True),
    sa.Column('attempted_at', sa.DateTime(timezone=True), nullable=False),
    sa.ForeignKeyConstraint(['message_id'], ['messages.id'], name='fk_wa_delivery_log_message', ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('idx_wa_delivery_message', 'wa_delivery_log', ['message_id', 'attempted_at'], unique=False, postgresql_using='btree')
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index('idx_wa_delivery_message', table_name='wa_delivery_log', postgresql_using='btree')
    op.drop_table('wa_delivery_log')
    op.drop_index('idx_message_mentions_member', table_name='message_mentions')
    op.drop_table('message_mentions')
    op.drop_index('idx_wa_sync_thread', table_name='wa_sync_log', postgresql_using='btree')
    op.drop_table('wa_sync_log')
    op.drop_index('idx_thread_members_member_active', table_name='thread_members', postgresql_where=sa.text('is_active = true'))
    op.drop_table('thread_members')
    op.drop_index('idx_messages_wa_status_created', table_name='messages', postgresql_where=sa.text("wa_status IN ('PENDING', 'FAILED')"))
    op.drop_index('idx_messages_thread_created', table_name='messages', postgresql_using='btree')
    op.drop_table('messages')
    op.drop_index('uq_threads_wa_group_jid', table_name='threads')
    op.drop_index('uq_threads_slug', table_name='threads')
    op.drop_index('idx_threads_wa_group_jid', table_name='threads')
    op.drop_index('idx_threads_is_active', table_name='threads')
    op.drop_index('idx_threads_created_at', table_name='threads', postgresql_using='btree')
    op.drop_table('threads')
    op.drop_index('uq_members_wa_jid', table_name='members')
    op.drop_index('idx_members_wa_jid', table_name='members')
    op.drop_index('idx_members_is_active', table_name='members')
    op.drop_index('idx_members_created_at', table_name='members', postgresql_using='btree')
    op.drop_table('members')
    sa.Enum('MEMBER', 'ADMIN', name='wamemberrole').drop(op.get_bind())
    sa.Enum('PENDING', 'QUEUED', 'SENT', 'DELIVERED', 'FAILED', name='wastatus').drop(op.get_bind())
    sa.Enum('INITIAL_IMPORT', 'MEMBER_JOINED', 'MEMBER_LEFT', 'MANUAL_REFRESH', name='wasynctype').drop(op.get_bind())
    # ### end Alembic commands ###
